<resources>
    <string name="app_name">app music kotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_button_theme">change theme</string>
    <string name="home_home_item">Home</string>
    <string name="home_library_item">Library</string>
    <string name="home_playlist_item">Playlist</string>
    <string name="home_button_langue">en</string>
    <string name="SignIn_email_hint">email</string>
    <string name="SignIn_password_hint">password</string>
    <string name="SignIn_Login_button">Sign In</string>
    <string name="SignIn_SignUp_textview">Sign Up</string>
    <string name="SignUp_title_textview">Sign Up</string>
    <string name="SignUp_username_hint">username</string>
    <string name="SignUp_email_hint">email</string>
    <string name="SignUp_phone_hint">phone</string>
    <string name="SignUp_password_hint">password</string>
    <string name="SignUp_repassword">repassword</string>
    <string name="SignUp_location_hint">location</string>
    <string name="SignUp_requitePassword_hint">Must be 8 or more charaters and contain at least 1 number and 1 special character</string>
    <string name="SignUp_question_textview">you have an account?</string>
    <string name="SignUp_SignIn_textview">SignIn</string>
    <string name="home_logout_button">Logout</string>
    <string name="playlist_title_textview">My Playlist</string>


    // Name music
    <string name="Item_music_song_title">kem duyen</string>
    <string name="Home_welcome_title">Welcome back !</string>
    <string name="Setting_title">Settings</string>
    <string name="Home_Rankings_title">Rankings</string>
    <string name="Home_topAlbum_title">Top Albums</string>
    <string name="Home_seeAll_title">See all</string>
    <string name="Profile_profile_title">Profile</string>
    <string name="Profile_username_hint">username</string>
    <string name="Setting_Language">Language</string>
    <string name="Home_local_title">Local</string>
    <string name="Home_Remote_title">Remote</string>
    <string name="Popup_playlist_add_music">Add to playlist</string>
    <string name="popup_playlist_share">Share</string>
    <string name="popup_remove_playlist">Remove playlist</string>
    <string name="popup_rename_playlist">Rename</string>
    <string name="popup_remove_music">Remove from playlist</string>
    <string name="Dialog_choose_playlist_title">Choose playlist</string>
    <string name="Dialog_add_playlist_title">New Playlist</string>
    <string name="Dialog_hint_add_playlist">Give your playlist a title</string>
    <string name="Dialog_button_create">Create</string>
    <string name="Dialog_button_cancel">Cancel</string>
    <string name="Dialog_Rename_playlist_title">Rename Playlist</string>
    <string name="Dialog_change_name_button">Change</string>
    <string name="Setting_set_language">English</string>
    <string name="Signin_Title">Login to your account</string>
    <string name="SignIn_Rememberme">Remember me</string>
    <string name="Signin_forgot_password">Forgot the password?</string>
    <string name="Signin_don_have_account">Don\'t have an account?</string>
    <string name="dialog_click_button_add">You don\'t have any playlists. Click the \"+\" button to add</string>
    <string name="SignUp_invalid_format">Invalid format</string>
    <string name="SignUp_confirmation_password">Confirmation password does not match</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>

