<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/ThemeBackground"
    tools:context=".ui.home.Fragment.LibraryFragment">

    <TextView
        android:textSize="20dp"
        android:lineHeight="30dp"
        android:textColor="@color/TitleText"
        android:text="@string/home_library_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Home_local_title"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRight"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Home_Remote_title"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@+id/btnLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLeft"
        android:layout_marginTop="16dp"
        />
    <androidx.constraintlayout.widget.Group
        android:id="@+id/grNoInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="imvNoInternet,imvTextNoInternet"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/imvNoInternet"
        android:src="@drawable/ic_nointernet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
        android:id="@+id/imvTextNoInternet"
        android:src="@drawable/ic_textnointernet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imvNoInternet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/vAnimation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_rawRes="@raw/lot_loading"
            app:lottie_loop="true"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerRemoteView"
        android:layout_width="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLeft"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>